# tundra-v35a-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: scrape.yml
dashboard/: middleware.ts  open-next.config.ts  package.json  pnpm-lock.yaml  wrangler.toml
dashboard/app/: layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
dashboard/components/: mileage-chart.tsx  (+14 more)
docs/: facebook-mining-summary.md  toyota-portal-experiment.md
ops/: crontab.example
scraper/: alembic.ini  pyproject.toml
scraper/alembic/: env.py
scraper/alembic/versions/: 0001_initial_schema.py  0002_seed_v35a_recall.py  0003_correct_v35a_recall_seeds.py  0004_add_build_windows_from_573.py  0005_add_carfax_observations.py  0006_add_nhtsa_complaints.py  0007_add_user_submissions.py  0008_add_recall_quarterly_reports.py  0009_add_recall_documents.py  0010_add_mfr_communications.py
scraper/scripts/: dump_to_d1.py
scraper/src/tundra/: cli.py  cloud_ingest.py  config.py
scraper/src/tundra/carfax/: __init__.py  fetcher.py  parser.py
scraper/src/tundra/carvana/: __init__.py  fetcher.py  har_parser.py
scraper/src/tundra/db/: __init__.py  models.py  session.py
scraper/src/tundra/nhtsa/: __init__.py  complaints.py  mfr_communications.py  recall_documents.py  recall_quarterly.py
scraper/src/tundra/pipeline/: carfax_runner.py  decoder.py  ingest.py  recall_runner.py
scraper/src/tundra/recalls/: __init__.py  poller.py
scraper/src/tundra/vin/: __init__.py  decoder.py
tools/: build-bookmarklet.py  carvana-scrape.bookmarklet.txt  carvana-scrape.js
(+19 files in other folders)
