[project]
name = "tundra-tracker"
version = "0.1.0"
description = "3rd-gen Toyota Tundra engine-failure & mileage tracker"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.50",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "typer>=0.15",
    "rich>=13.9",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "tenacity>=9.0",
    "pdfplumber>=0.11.9",
]

[project.scripts]
tundra = "tundra.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tundra"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "ruff>=0.9",
    "mypy>=1.14",
    "respx>=0.22",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length is enforced by formatter, not linter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
